# xonsh-rd-parser

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  Notes.md  README.md  pyproject.toml  pyrightconfig.json  tasks.py  xonsh_rd_parser.pyi
.cargo/: config.toml
.github/actions/pkg-install/: action.yml  pkg_install.yml
.github/workflows/: CI.yml  release-please.yml  test.yml
benches/: parser.rs
crates/py_ast/: Cargo.toml
crates/py_ast/src/: ast_module.rs  converter.rs  lib.rs  to_ast.rs  to_ast_expr.rs  to_ast_mtch.rs  to_ast_stmt.rs
crates/py_ast/src/to_ast/: expr.rs  match.rs  mod.rs  stmt.rs
crates/ruff_macros/src/: map_codes.rs  rule_code_prefix.rs
crates/ruff_python_ast/: Cargo.toml
crates/ruff_python_ast/src/: builders.rs  comparable.rs  expression.rs  helpers.rs  lib.rs  name.rs  node.rs  nodes.rs  parenthesize.rs  relocate.rs  str_prefix.rs  visitor.rs
crates/ruff_python_ast/src/visitor/: transformer.rs
crates/ruff_python_parser/: Cargo.toml
crates/ruff_python_parser/src/: builders.rs  lexer.rs  lib.rs  semantic_errors.rs  string.rs  token.rs  token_source.rs
crates/ruff_python_parser/src/parser/: expression.rs  helpers.rs  mod.rs  statement.rs  subproc.rs  tests.rs
crates/ruff_python_parser/src/snapshots/: ruff_python_parser__lexer__tests__empty_tstrings.snap  ruff_python_parser__lexer__tests__fstring.snap  ruff_python_parser__lexer__tests__fstring_comments.snap  ruff_python_parser__lexer__tests__fstring_conversion.snap  ruff_python_parser__lexer__tests__fstring_escape.snap  ruff_python_parser__lexer__tests__fstring_escape_braces.snap  ruff_python_parser__lexer__tests__fstring_escape_raw.snap  ruff_python_parser__lexer__tests__fstring_expression_multiline.snap  ruff_python_parser__lexer__tests__fstring_multiline.snap  ruff_python_parser__lexer__tests__fstring_named_unicode.snap  ruff_python_parser__lexer__tests__fstring_named_unicode_raw.snap  ruff_python_parser__lexer__tests__fstring_nested.snap  ruff_python_parser__lexer__tests__fstring_parentheses.snap  ruff_python_parser__lexer__tests__fstring_single_quote_escape_mac_eol.snap  ruff_python_parser__lexer__tests__fstring_single_quote_escape_unix_eol.snap  ruff_python_parser__lexer__tests__fstring_single_quote_escape_windows_eol.snap  ruff_python_parser__lexer__tests__fstring_with_format_spec.snap  ruff_python_parser__lexer__tests__fstring_with_ipy_escape_command.snap  ruff_python_parser__lexer__tests__fstring_with_multiline_format_spec.snap  ruff_python_parser__lexer__tests__fstring_with_named_expression.snap  ruff_python_parser__lexer__tests__fstring_with_nul_char.snap  ruff_python_parser__lexer__tests__line_continuation_at_eof_after_newline_mac_eol.snap  ruff_python_parser__lexer__tests__line_continuation_at_eof_after_newline_unix_eol.snap  ruff_python_parser__lexer__tests__line_continuation_at_eof_after_newline_windows_eol.snap  ruff_python_parser__lexer__tests__line_continuation_at_eof_mac_eol.snap  ruff_python_parser__lexer__tests__line_continuation_at_eof_unix_eol.snap  ruff_python_parser__lexer__tests__line_continuation_at_eof_windows_eol.snap  ruff_python_parser__lexer__tests__nested_t_and_fstring.snap  ruff_python_parser__lexer__tests__tstring.snap  ruff_python_parser__lexer__tests__tstring_comments.snap  ruff_python_parser__lexer__tests__tstring_conversion.snap  ruff_python_parser__lexer__tests__tstring_escape.snap  ruff_python_parser__lexer__tests__tstring_escape_braces.snap  ruff_python_parser__lexer__tests__tstring_escape_raw.snap  ruff_python_parser__lexer__tests__tstring_expression_multiline.snap  ruff_python_parser__lexer__tests__tstring_multiline.snap  ruff_python_parser__lexer__tests__tstring_named_unicode.snap  ruff_python_parser__lexer__tests__tstring_named_unicode_raw.snap  ruff_python_parser__lexer__tests__tstring_nested.snap  ruff_python_parser__lexer__tests__tstring_parentheses.snap  (+70 more)
crates/ruff_python_parser/tests/: fixtures.rs
crates/ruff_python_parser/tests/snapshots/: invalid_syntax@ann_assign_stmt_invalid_annotation.py.snap  invalid_syntax@args_unparenthesized_generator.py.snap  invalid_syntax@assign_stmt_invalid_value_expr.py.snap  invalid_syntax@decorator_invalid_expression.py.snap  invalid_syntax@del_incomplete_target.py.snap  invalid_syntax@expressions__arguments__double_starred.py.snap  invalid_syntax@expressions__arguments__invalid_expression.py.snap  invalid_syntax@expressions__arguments__missing_expression.py.snap  invalid_syntax@expressions__arguments__unclosed_0.py.snap  invalid_syntax@expressions__arguments__unclosed_1.py.snap  invalid_syntax@expressions__arguments__unclosed_2.py.snap  invalid_syntax@expressions__attribute__invalid_member.py.snap  invalid_syntax@expressions__attribute__multiple_dots.py.snap  invalid_syntax@expressions__attribute__no_member.py.snap  invalid_syntax@expressions__await__no_expression_0.py.snap  invalid_syntax@expressions__await__no_expression_1.py.snap  invalid_syntax@expressions__await__recover.py.snap  invalid_syntax@expressions__bin_op__invalid_rhs_expression.py.snap  invalid_syntax@expressions__bin_op__missing_lhs.py.snap  invalid_syntax@expressions__bin_op__missing_rhs_0.py.snap  invalid_syntax@expressions__bin_op__missing_rhs_1.py.snap  invalid_syntax@expressions__bool_op__invalid_rhs_expression.py.snap  invalid_syntax@expressions__bool_op__missing_rhs.py.snap  invalid_syntax@expressions__compare__invalid_order.py.snap  (+209 more)
crates/ruff_text_size/: Cargo.toml
src/: annotate_src.rs  lexer.rs  lib.rs  location.rs  parser.rs  parser_test.rs  test_utils.rs
src/snapshots/: xonsh_rd_parser__parser__tests__tmp.snap
tests/: bench.py  bench_mem.py  conftest.py  test_bench.py  test_lexer.py  test_lexing.py  test_macros_call.py  test_macros_proc.py  test_macros_with.py  test_proc_toks.py  test_py_syntax.py  test_redirects.py  test_simple.py  test_xsh_syntax.py  yaml_snaps.py
tests/__snapshots__/: test_xsh_syntax.ambr
tests/data/: exprs.yml  fstrings.3_12.py  lambdas.py  stmts.yml  strings.py
tests/data/exprs/: bg.py  env.py  globs.py
tests/scripts/: rd.py  xply.py
(+1 files in other folders)
