[package]
name = "py_ast"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
pyo3 = { workspace = true }
ruff_python_ast = { workspace = true }
ruff_text_size = { workspace = true }
num-complex = { workspace = true }
# bon = { workspace = true }
ruff_source_file = { workspace = true }

[lints]
workspace = true
